<resources>
    <string name="app_name">MovieRestful</string>
    <string name="action_settings">Settings</string>
    <string name="title_movies">Movies</string>
    <string name="title_series">Tv Series</string>
    <string name="title_person">Celebrities</string>
    <string name="more_info">More Info</string>
    <string name="min">min</string>
    <string name="budget">Budget</string>
    <string name="numberOfSeasons">Seasons</string>
    <string name="seasons">Seasons</string>
    <string name="imageTransition">imageTransition</string>
</resources>
